# trophy-wm

./: Cargo.toml
lua/: init.lua
src/: main.rs
src/config/: mod.rs  structs.rs
src/error/: mod.rs
