[package]
name = "trophy-wm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rlua = "0.19.4"
thiserror = "1.0.40"
tokio = { version = "1.28.0", features = ["full"] }

[dev-dependencies]
anyhow = "1.0.71"
